# rosellm

./: .clangd  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  GRADIENT_BUCKETING_FEATURE.md  GRADIENT_SCALER_IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NEXT_FEATURE_RECOMMENDATION.md  README.md  ROPE_FEATURE_SUMMARY.md  ROPE_IMPLEMENTATION_PLAN.md  SEQUENCE_PARALLEL_IMPLEMENTATION_PLAN.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-research.txt  requirements.txt  sample_text.txt  setup.py
bench/: bench_throughput.py
benchmarks/: test_multi_tensor_ops_performance.py
configs/: default.yaml
docs/: FUSED_LAYER_NORM_IMPLEMENTATION.md  PREVENT_IDE_ERRORS.md  advanced-gradient-finalization-technical-guide.md  advanced-gradient-utilities-deep-dive.md  code-quality-design-patterns-deep-dive.md  decoupled-gradient-storage-deep-dive.md  deepseek-release-timeline.md  distributed-activation-checkpointing-deep-dive.md  distributed-optimizer-deep-dive.md  distributed-optimizer-interview-guide.md  distributed-optimizer-interview-summary.md  distributed-optimizer-troubleshooting.md  distributed-training-integration-deep-dive.md  documentation-quality.md  dynamic-loss-scaling-deep-dive.md  energy-monitoring-system-deep-dive.md  fused-layer-norm-deep-dive.md  global-memory-buffer-deep-dive.md  global-memory-buffer-interview-guide.md  glossary.md  gradient-accumulation-fusion-deep-dive.md  gradient-bucket-coalescing-deep-dive.md  gradient-bucket-coalescing-implementation-plan.md  gradient-bucketing-algorithms.md  gradient-bucketing-communication-overlap-deep-dive.md  gradient-bucketing-implementation-guide.md  gradient-clipping-technical-interview-guide.md  gradient-coalescing-integration-patterns.md  gradient-communication-bucketing-deep-dive.md  gradient-finalization-synchronization-deep-dive.md  gradient-scaler-technical-interview-guide.md  gradient-synchronization-interview-guide.md  gradient-utilities-architecture-interview-guide.md  index.md  learning-roadmap.md  memory-mapped-indexed-dataset-deep-dive.md  memory-optimization-interview-guide.md  microbatch-calculator-technical-deep-dive.md  microbatch_calculator_design.md  mmap_indexed_dataset_implementation_plan.md  (+20 more)
examples/: advanced_gradient_finalization_example.py  advanced_parallel_training.py  advanced_training_example.py  agentic_rl_toy.py  async_gradient_allreduce_example.py  buffer_system_example.py  chained_optimizer_example.py  contiguous_buffer_example.py  decoupled_gradient_example.py  distributed_optimizer_example.py  dynamic_loss_scaling_example.py  energy_monitoring_basic_example.py  energy_monitoring_distributed_example.py  energy_monitoring_integration_example.py  fused_layer_norm_example.py  global_memory_buffer_example.py  gradient_accumulation_fusion_example.py  gradient_bucketing_example.py  gradient_clipping_example.py  gradient_coalescing_example.py  gradient_finalization_example.py  gradient_scaler_example.py  gradient_utilities_example.py  indexed_dataset_example.py  microbatch_calculator_example.py  multi_tensor_adam_example.py  param_grad_mapping_example.py  parameter_overlap_example.py  range_buffer_memory_efficiency.py  rng_management_example.py  rope_training_example.py  rope_usage_example.py  selective_recompute_example.py  sequence_parallel_example.py  shared_weight_gradient_example.py  timers_example.py  training_example.py  vocab_parallel_training_example.py
notebooks/: all_gather.py  all_reduce.py  broadcast.ipynb  broadcast.py  bucket_dp.py  column_linear.py  cross_entropy.ipynb  ddp.py  gather.py  layernorm.ipynb  norms.ipynb  reduce.py  reduce_scatter.py  row_linear.py  run.py  scatter.py
rosellm/: __init__.py  benchmark_scheduler.sh  benchmark_scheduler_no_prefix_cache.sh  block.py  chat_hf.sh  config.py  engine.py  envs.py  executor.py  generate.sh  generate_batch.sh  input.py  llm.py  loader.py  logger.py  offline_example.sh  online_example.sh  openai_client_chat.sh  openai_server.sh  output.py  py.typed  sequence.py  utils.py
scripts/: autofix_ide.py  bench_kv_append.py  bench_kv_cow_clone.py  bench_prefix_cache_lookup.py  bench_roseinfer_self_compare.sh  bench_serving_compare.sh  bench_serving_fused_ops_compare.sh  check_docs_math.py  dev_deepseek_v2_fp8_dist_smoke.py  literature_corpus.py  literature_discovery.py  literature_doc_audit.py  literature_equivalence_audit.py  literature_library.py  literature_oa_recovery.py  literature_page_scan.py  literature_pmc_recovery.py  literature_recovery_promotion.py  literature_report.py  literature_secondary_recovery.py  my_edit_workflow.py  pylance_checker.py  run_tests.sh  safe_edit.py  test_workflow.py  validate_code.py  validate_fused_layer_norm.py  validate_scheduler_math.py
tests/: basic_integration_test.py  integration_test.py  run_all_tests.py  test_autofix_ide.py  test_cli_generate.py  test_config.py  test_fast_topk_sampling.py  test_flashinfer_fused_sampler.py  test_hf_gpt2_convert.py  test_hf_qwen3_convert.py  test_kv_append_token_batch_cow.py  test_kv_append_token_batch_rollover.py  test_kv_cache_sizing.py  test_literature_corpus.py  test_literature_discovery.py  test_literature_doc_audit.py  test_literature_equivalence_audit.py  test_literature_library.py  test_literature_oa_recovery.py  test_literature_page_scan.py  test_literature_pmc_recovery.py  test_literature_recovery_promotion.py  test_literature_report.py  test_literature_secondary_recovery.py  test_logger.py  test_max_active_requests.py  test_max_inflight_requests.py  test_mp_scheduler_manager.py  test_online_scheduler_add_requests_prefix_cache.py  test_online_scheduler_pretok.py  test_online_scheduler_public_api.py  test_overlap_schedule.py  test_paged_attention_gqa.py  (+18 more)
(+470 files in other folders)
