[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rosellm"
version = "0.0.1"
description = "A LLM inference engine"
authors = [
    { name = "wineandchord", email = "guoqizhou19@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.6.0",
    "huggingface-hub>=0.26.2",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0",
]
dev = [
    "pip-tools>=7.3.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "pre-commit>=3.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rosellm" 
