[build-system]
requires = [
    "setuptools>=68.0",
    "wheel",
    "torch>=2.0.0",  # Needed for CUDAExtension if CUDA files exist
]
build-backend = "setuptools.build_meta"

[project]
name = "rosellm"
version = "0.1.0"
description = "A comprehensive RLHF framework for Large Language Models"
authors = [
    {name = "wineandchord", email = "guoqizhou19@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["llm", "rlhf", "distributed", "training", "inference"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.6.0",
    "transformers>=4.20.0",
    "huggingface-hub>=0.26.2",
    "psutil>=5.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "pre-commit>=3.4.0",
    "pip-tools>=7.3.0",
]
all = [
    "rosellm[test,dev]",
]

[project.urls]
Homepage = "https://github.com/chtho-like/rosellm"
Repository = "https://github.com/chtho-like/rosellm.git"
Issues = "https://github.com/chtho-like/rosellm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rosellm*"]
exclude = ["tests*", "docs*", "examples*", "notebooks*"]

# Testing configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rosellm --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests as requiring GPU (deselect with '-m \"not gpu\"')",
    "distributed: marks tests as requiring distributed setup",
]

# Code formatting
[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
)/
'''

# Import sorting
[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# Type checking
[tool.mypy]
python_version = "3.8"
ignore_missing_imports = true
strict_optional = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false